<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="popular_movie">POPULAR MOVIES </string>
    <string name="stock_hawk">STOCK HAWK </string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="material_app">MAKE YOUR APP MATERIAL</string>
    <string name="go_ubiquitous">GO UBIQUITOUS</string>
    <string name="capstone">CAPSTONE</string>
    <string name="title">My Nanodegree Apps</string>
</resources>
