<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.gmail.aruntayal.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/title"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/PopularMovies"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center_horizontal"
        android:text="@string/popular_movie"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="PopularMoviesClicked"
        android:layout_marginTop="5dp"

         />

    <Button
        android:id="@+id/StockHawk"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center_horizontal"
        android:text="@string/stock_hawk"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="StockHawkClicked"

        android:layout_marginTop="5dp"
        />

    <Button
        android:id="@+id/BuildItBigger"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center_horizontal"
        android:text="@string/build_it_bigger"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="BuildItBiggerClicked"
        android:layout_marginTop="5dp"

        />

    <Button
        android:id="@+id/materialApp"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center_horizontal"
        android:text="@string/material_app"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="MaterialDesignClicked"
        android:layout_marginTop="5dp"
        />

    <Button
        android:id="@+id/goUbiquitous"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center_horizontal"
        android:text="@string/go_ubiquitous"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="GoUbiquitousClicked"
        android:layout_marginTop="5dp"
        />

    <Button
        android:id="@+id/capstone"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center_horizontal"
        android:text="@string/capstone"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="CapstoneClicked"
        android:layout_marginTop="5dp"
        />


</LinearLayout>
